# Tria

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindClang.cmake
lua/: dumper.lua  json.lua  nuria.lua  util.lua
src/: CMakeLists.txt  compiler.cpp  compiler.hpp  definitions.cpp  definitions.hpp  defs.cpp  defs.hpp  filemapper.cpp  filemapper.hpp  generator.cpp  generator.hpp  jsongenerator.cpp  jsongenerator.hpp  luagenerator.cpp  luagenerator.hpp  luashell.cpp  luashell.hpp  main.cpp  nuriagenerator.cpp  nuriagenerator.hpp  triaaction.cpp  triaaction.hpp  triaastconsumer.cpp  triaastconsumer.hpp
tests/: tst_header.hpp  tst_tria.cpp
